--- a/starter-code/src/main.html
+++ b/starter-code/src/main.html
@@ -1,4 +1,4 @@
-
+<p>html for debugging</p>
 
 <button onClick ="findLongestWord()">Debug</button>
 <br>
@@ -22,8 +22,12 @@
 <br>
 <br>
 <button onClick ="uniquifyArray()">uniquify Array </button>
-
-
+<br>
+<br>
+<button onClick ="doesWordExist()">does Word Exist </button>
+<br>
+<br>
+<button onClick ="howManyTimes()">How many times </button>
 
 
 
